coder-0.0.3 (fixing raspberry request error)