@@ -1,24 +1,27 @@
 package org.masos.embed.sysconfig.model.executor;
 
+import org.masos.embed.sysconfig.file.FileUtils;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.stream.Collectors;
 
-public class RuntimeExecutor extends Executor {
+public class RuntimeExecutor implements Executor {
 
     @Override
-    public String execute(String command) {
+    public String execute(String command, boolean mantainLineBreak) {
         try {
-            ProcessBuilder processBuilder = new ProcessBuilder(command).redirectErrorStream(true);
-            Process process = processBuilder.start();
-            try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                return bufferedReader.lines().collect(Collectors.joining());
+            Process process = Runtime.getRuntime().exec(command);
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String output = reader.lines().collect(Collectors.joining());
+                if (!mantainLineBreak) {
+                    return output.replace(FileUtils.BREAK_LINE, "");
+                }
+                return output;
             }
         } catch (IOException e) {
-            System.out.println("Não foi possível executar o comando: " + command);
+            throw new RuntimeException(e);
         }
-        return null;
     }
-
 }
